--- a/package.json
+++ b/package.json
@@ -22,12 +22,24 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/crop": "^4.18.0",
+    "@ionic-native/image-picker": "^4.18.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.1",
+    "cordova-android": "7.1.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-crop": "0.4.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "2.2.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.6.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -42,7 +54,23 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-camera": {}
-    }
+      "cordova-plugin-camera": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
+      },
+      "cordova-plugin-crop": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
   }
 }
