--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
-    "angularfire2": "^5.1.1",
+    "angularfire2": "^4.0.0-rc0",
     "cordova-android": "7.1.4",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "4.0.3",
@@ -40,7 +40,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-telerik-imagepicker": "2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "^5.6.0",
+    "firebase": "^3.9.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -48,7 +48,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.1",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
