--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/animations": "^5.2.11",
+    "@angular/common": "^5.2.11",
+    "@angular/compiler": "^5.2.11",
+    "@angular/compiler-cli": "^5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "^5.2.11",
+    "@angular/http": "^5.2.11",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
+    "@angular/platform-server": "^5.2.11",
+    "@angular/router": "^5.2.11",
+    "@angular/upgrade": "^5.2.11",
     "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/crop": "^4.18.0",
@@ -43,13 +46,13 @@
     "firebase": "^3.9.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^5.5.12",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.1",
-    "typescript": "~2.6.2"
+    "@ionic/app-scripts": "3.2.1",
+    "typescript": "^2.4.2"
   },
   "description": "An Ionic project",
   "cordova": {
