--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
   "include": [
     "src/**/*.ts"
   ],
-  "exclude": [
+  "clude": [
     "node_modules",
     "src/**/*.spec.ts",
     "src/**/__tests__/*.ts"
@@ -24,5 +24,6 @@
   "compileOnSave": false,
   "atom": {
     "rewriteTsconfig": false
-  }
+  },
+  "types": ["jasmine"],
 }
