--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
   "include": [
     "src/**/*.ts"
   ],
-  "clude": [
+  "exclude": [
     "node_modules",
     "src/**/*.spec.ts",
     "src/**/__tests__/*.ts"
