--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.1",
+    "@ionic/app-scripts": "^3.2.3",
     "@types/jasmine": "^3.3.8",
     "@types/node": "^10.12.21",
     "angular-protractor-cucumber": "^0.1.28",
@@ -66,7 +66,7 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^3.3.1",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^2.0.1",
