--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
+    "angular": "^1.7.7",
     "angularfire2": "^4.0.0-rc0",
     "cordova-android": "7.1.4",
     "cordova-ios": "^4.5.5",
@@ -52,8 +53,11 @@
     "cordova-plugin-telerik-imagepicker": "2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^3.9.0",
+    "ionic": "^4.10.3",
     "ionic-angular": "3.9.2",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
+    "node-modules": "^1.0.1",
     "rxjs": "^5.5.12",
     "sw-toolbox": "3.6.0",
     "zone.js": "^0.8.26"
