--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "firebase": "^3.9.0",
     "ionic": "^4.10.3",
     "ionic-angular": "3.9.2",
-    "ionic-native": "^2.9.0",
     "ionic-img-viewer": "^2.9.0",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "node-modules": "^1.0.1",
     "rxjs": "^5.5.12",
@@ -64,7 +64,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.2",
+    "@ionic/app-scripts": "3.2.3",
     "@types/jasmine": "^3.3.8",
     "@types/node": "^10.12.21",
     "angular-protractor-cucumber": "^0.1.28",
