--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
     "ionic-img-viewer": "^2.9.0",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
+    "natives": "^1.1.6",
     "node-modules": "^1.0.1",
     "rxjs": "^5.5.12",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "^0.8.26"
+    "sw-toolbox": "^3.6.0",
+    "threads": "^0.12.1",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.3",
