--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "angularfire2": "^4.0.0-rc0",
     "cordova-android": "7.1.4",
     "cordova-ios": "^4.5.5",
-    "cordova-plugin-camera": "4.0.3",
-    "cordova-plugin-crop": "0.4.0",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-ionic-webview": "^2.4.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-telerik-imagepicker": "2.2.2",
+    "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^3.9.0",
     "ionic": "^4.10.3",
