--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.3",
+    "@ionic/app-scripts": "^3.2.3",
     "@types/jasmine": "^3.3.8",
     "@types/node": "^10.12.21",
     "angular-protractor-cucumber": "^0.1.28",
