--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "@angular/animations": "^5.2.11",
-    "@angular/cli": "^7.3.3",
+    "@angular/cli": "^7.3.7",
     "@angular/common": "^5.2.11",
     "@angular/compiler": "^5.2.11",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/core": "^5.2.11",
-    "@angular/fire": "^5.1.1",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "^5.2.11",
     "@angular/http": "^5.2.11",
     "@angular/platform-browser": "^5.2.11",
@@ -39,7 +39,7 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
-    "angular": "^1.7.7",
+    "angular": "^1.7.8",
     "angularfire2": "^4.0.0-rc0",
     "cordova-android": "7.1.4",
     "cordova-ios": "^4.5.5",
@@ -47,13 +47,13 @@
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.4.0",
+    "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-telerik-imagepicker": "^2.2.2",
+    "cordova-plugin-telerik-imagepicker": "^2.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^3.9.0",
-    "ionic": "^4.10.3",
+    "ionic": "^4.12.0",
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-native": "^2.9.0",
@@ -66,9 +66,9 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.3",
-    "@types/jasmine": "^3.3.8",
-    "@types/node": "^10.12.21",
+    "@ionic/app-scripts": "3.2.3",
+    "@types/jasmine": "^3.3.12",
+    "@types/node": "^10.14.4",
     "angular-protractor-cucumber": "^0.1.28",
     "angular2-template-loader": "^0.6.2",
     "html-loader": "^0.5.5",
@@ -86,7 +86,8 @@
     "protractor": "^5.4.2",
     "ts-loader": "^3.5.0",
     "ts-node": "^3.3.0",
-    "typescript": "^2.4.2"
+    "typescript": "^3.5.0",
+    "ws": "3.3.2"
   },
   "description": "An Ionic project",
   "cordova": {
