--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
     "rxjs": "^5.5.12",
     "sw-toolbox": "^3.6.0",
     "threads": "^0.12.1",
+    "typescript": "^3.4.1",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.3",
-    "@types/jasmine": "^3.3.8",
-    "@types/node": "^10.12.21",
+    "@types/jasmine": "^3.3.12",
+    "@types/node": "^10.14.4",
     "angular-protractor-cucumber": "^0.1.28",
     "angular2-template-loader": "^0.6.2",
     "html-loader": "^0.5.5",
@@ -86,7 +87,7 @@
     "protractor": "^5.4.2",
     "ts-loader": "^3.5.0",
     "ts-node": "^3.3.0",
-    "typescript": "^2.4.2"
+    "ws": "3.3.2"
   },
   "description": "An Ionic project",
   "cordova": {
