--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/crop": "^4.18.0",
+    "@ionic-native/firebase": "^5.0.0-beta.14",
     "@ionic-native/image-picker": "^4.18.0",
+    "@ionic-native/local-notifications": "^5.4.0",
+    "@ionic-native/push": "^5.4.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
@@ -53,6 +56,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-telerik-imagepicker": "^2.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-support-google-services": "^1.1.0",
     "firebase": "^3.9.0",
     "ionic": "^4.12.0",
     "ionic-angular": "3.9.2",
@@ -61,6 +65,8 @@
     "ionicons": "3.0.0",
     "natives": "^1.1.6",
     "node-modules": "^1.0.1",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "2.2.3",
     "rxjs": "^5.5.12",
     "sw-toolbox": "^3.6.0",
     "threads": "^0.12.1",
@@ -106,7 +112,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "phonegap-plugin-push": {}
     },
     "platforms": [
       "ios",
