--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/parse": "^2.2.2",
     "angular": "^1.7.8",
     "angularfire2": "^4.0.0-rc0",
+    "casperjs": "^1.1.4",
     "cordova-android": "7.1.4",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "^4.0.3",
@@ -59,6 +60,7 @@
     "ionic-img-viewer": "^2.9.0",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
+    "java": "^0.11.0",
     "natives": "^1.1.6",
     "node-modules": "^1.0.1",
     "rxjs": "^5.5.12",
@@ -71,18 +73,18 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.2.3",
     "@types/jasmine": "^3.3.12",
-    "@types/node": "^10.14.4",
+    "@types/node": "^10.14.5",
     "angular-protractor-cucumber": "^0.1.28",
     "angular2-template-loader": "^0.6.2",
     "html-loader": "^0.5.5",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "null-loader": "^0.1.1",
