Push notifications plugins, minor tweaks; References cited as comments - code pertaining/related to direct messages functionality modeled from code of author Raja Yogan

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/crop": "^4.18.0",
     "@ionic-native/image-picker": "^4.18.0",
+    "@ionic-native/push": "^5.5.1",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
@@ -63,6 +64,7 @@
     "java": "^0.11.0",
     "natives": "^1.1.6",
     "node-modules": "^1.0.1",
+    "phonegap-plugin-push": "2.2.3",
     "rxjs": "^5.5.12",
     "sw-toolbox": "^3.6.0",
     "threads": "^0.12.1",
@@ -71,7 +73,7 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.3",
+    "@ionic/app-scripts": "^3.2.3",
     "@types/jasmine": "^3.3.12",
     "@types/node": "^10.14.5",
     "angular-protractor-cucumber": "^0.1.28",
@@ -108,7 +110,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "phonegap-plugin-push": {}
     },
     "platforms": [
       "ios",
