--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/crop": "^4.18.0",
+    "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/image-picker": "^4.18.0",
     "@ionic-native/push": "^5.5.1",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -49,12 +50,14 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-telerik-imagepicker": "^2.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-support-google-services": "^1.1.0",
     "firebase": "^3.9.0",
     "ionic": "^4.12.0",
     "ionic-angular": "3.9.2",
@@ -64,6 +67,7 @@
     "java": "^0.11.0",
     "natives": "^1.1.6",
     "node-modules": "^1.0.1",
+    "phonegap-plugin-multidex": "^1.0.0",
     "phonegap-plugin-push": "2.2.3",
     "rxjs": "^5.5.12",
     "sw-toolbox": "^3.6.0",
@@ -111,7 +115,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "phonegap-plugin-push": {}
+      "phonegap-plugin-push": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "ios",
