--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/crop": "^4.18.0",
-    "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/image-picker": "^4.18.0",
     "@ionic-native/push": "^5.5.1",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -45,12 +44,9 @@
     "angular": "^1.7.8",
     "angularfire2": "^4.0.0-rc0",
     "casperjs": "^1.1.4",
-    "cordova-android": "7.1.4",
-    "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -68,7 +64,6 @@
     "natives": "^1.1.6",
     "node-modules": "^1.0.1",
     "phonegap-plugin-multidex": "^1.0.0",
-    "phonegap-plugin-push": "2.2.3",
     "rxjs": "^5.5.12",
     "sw-toolbox": "^3.6.0",
     "threads": "^0.12.1",
@@ -115,12 +110,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "phonegap-plugin-push": {},
       "cordova-plugin-firebase": {}
     },
-    "platforms": [
-      "ios",
-      "android"
-    ]
+    "platforms": []
   }
 }
