--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "angular": "^1.7.8",
     "angularfire2": "^4.0.0-rc0",
     "casperjs": "^1.1.4",
+    "cordova-android": "^7.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-device": "^2.0.2",
@@ -112,6 +113,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-firebase": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
